tests/ui/macros/issue-42954.stderr
error: `<` is interpreted as a start of generic arguments for `u32`, not a comparison
  --> $DIR/issue-42954.rs:7:19
   |
LL | / macro_rules! is_plainly_printable {
LL | |     ($i: ident) => {
LL | |         $i as u32 < 0
   | |                   ^ - interpreted as generic arguments
   | |                   |
   | |                   not interpreted as comparison
LL | |     };
LL | | }
   | |_- in this expansion of `is_plainly_printable!`
...
LL |       is_plainly_printable!(c);
   |       ------------------------ in this macro invocation
   |
help: try comparing the cast value
   |
LL |         ($i as u32) < 0
   |         +         +

error: aborting due to previous error

